--- a/src/main/resources/templates/layout/main_layout.html
+++ b/src/main/resources/templates/layout/main_layout.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <title>Phone store</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/main_style.css" type="text/css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="/jscript/main-jscript.js" th:src="@{/jscript/main-jscript.js}"></script>
 </head>
@@ -17,8 +18,12 @@
             <div>
                 <nav class="menu">
                     <ul>
+                        <li>
+                            <span>USERNAME: </span>
+                            <a href="#" th:text="${session.user.getStaffInfo().username}"/>
+                        </li>
                         <li id="nav-1-home" class="nav-home">
-                            <a href="#home">
+                            <a href="/admin/order">
                                 <span class="fas fa-home"></span>
                                 <span>home</span>
                             </a>
@@ -45,20 +50,20 @@
                                 </a>
                             </div>
                         </div>
-                        <li id="nav-3-staff" class="nav-staff">
+                        <li id="nav-3-staff" th:if="${session.user.getStaffInfo().roleId==1}" class="nav-staff">
                             <a href="/admin/staff">
-                                <span class="fas fa-user-tag"></span>
+                                <span class="fas fa-staffInfo-tag"></span>
                                 <span>Staff</span>
                             </a>
                         </li>
                         <li id="nav-4-customer" class="nav-customer">
-                            <a href="#Customer">
+                            <a href="/admin/customer">
                                 <span class="fas fa-users"></span>
                                 <span>Customer</span>
                             </a>
                         </li>
                         <li id="nav-5-logout" class="nav-logout">
-                            <a href="#logout">
+                            <a href="/admin/logout">
                                 <span class="fa fa-sign-out-alt"></span>
                                 <span>Sign-out</span></a>
                         </li>
@@ -76,6 +81,9 @@
             <p class="footer-phonenum">Phone Number: 0909603151</p>
         </footer>
     </div>
+    <script th:inline="javascript" layout:fragment="script">
+
+    </script>
 
 </body>
 
