--- a/src/main/resources/templates/product/phone.html
+++ b/src/main/resources/templates/product/phone.html
@@ -7,26 +7,107 @@
     <link href="/css/phone-style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-<div layout:fragment="content">
-    <div class="container1">
-        <table>
-            <br>
-            <tr>
-                <td>
-                    <table>
-                        <tr>
-                            <td class="td-search-phone"><input type="text" class="text-search"></td>
-                            <td><a class="btn btn-primary btn-sm mb-3" id="btn-add-phone" href="/admin/uploadPhone">Add</a></td>
-                        </tr>
-                    </table>
-                </td>
-            </tr>
-            <tr>
-                <td class="table-phone">
-                    <div>
-                        <table class="table table-bordered table-striped" id="table-product">
-                            <!-- build HTML table based on employees -->
-                            <thead class="table-dark">
+    <div layout:fragment="content">
+        <div class="container1">
+            <table>
+                <br>
+                <tr>
+                    <td>
+                        <table>
+                            <tr>
+                                <td class="td-search-phone">
+                                    <input type="text" class="text-search" id="text-search-phone" placeholder="search">
+                                    <i class="fas fa-search"></i>
+                                </td>
+                                <td><a class="btn btn-primary btn-sm mb-3" id="btn-add-phone"
+                                       href="/admin/uploadPhone">Add</a></td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="table-phone" id="table-phone">
+                        <div>
+                            <table class="table table-bordered table-striped" id="table-product">
+                                <!-- build HTML table based on employees -->
+                                <thead class="table-dark">
+                                <tr class="tr-table-phone-title">
+                                    <th class="th-phone-name">Phone name</th>
+                                    <th class="th-image">image</th>
+                                    <th class="th-brand">Brand</th>
+                                    <th class="th-color">Color</th>
+                                    <th class="th-price">Price</th>
+                                    <th class="th-quantity">Quantity</th>
+                                    <th class="th-description">Description</th>
+                                    <th class="th-action">Action</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr class="tr-phone-style" th:each="tempPhone:${phonePage.content}">
+                                    <td th:text="${tempPhone.phoneName}"/>
+                                    <td class="td-phone-image">
+                                        <img th:src="'http://127.0.0.1:5000/get-image/'+${tempPhone.image}" th:width="200px"
+                                             th:height="150px"/>
+                                    </td>
+                                    <td th:text="${tempPhone.brand}"/>
+                                    <td th:text="${tempPhone.color}"/>
+                                    <td >
+                                        <span th:text="${#numbers.formatDecimal(tempPhone.price, 0, 'COMMA', 0, 'POINT')}">
+                                        </span>VNĐ
+                                    </td>
+                                    <td th:text="${tempPhone.quantity}"/>
+                                    <td th:text="${tempPhone.description}"/>
+                                    <td>
+                                        <a class="btn btn-primary btn-sm mb-3"
+                                           th:href="@{/admin/updatePhone(idPhone=${tempPhone.id})}">Update</a>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </td>
+                </tr>
+            </table>
+            <nav aria-label="...">
+                <ul class="pagination pagination-sm" th:if="${phonePage.totalPages > 0}"
+                    th:each="pageNumber : ${pageNumbers}">
+                    <li class="page-item">
+                        <a class="page-link"
+                           style="color: black"
+                           th:href="@{/admin/phone(page=${pageNumber})}"
+                           th:text="${pageNumber}"
+                           th:class="${pageNumber==phonePage.number + 1} ? active"/>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+<script th:inline="javascript" layout:fragment="script">
+    /*<![CDATA[*/
+    var phones = /*[[${phones}]]*/ 'default';
+    var phonePage = /*[[${phonePage.content}]]*/ 'default';
+    /*]]>*/
+    $('#text-search-phone').on('keyup', function () {
+        var value = $(this).val();
+        var data = FilterFunction(value, phones);
+        rebuildTable(data,value);
+    });
+
+    function FilterFunction(value, data) {
+        var filterData = [];
+        for (var i = 0; i < data.length; i++) {
+            value = value.toLowerCase();
+            var pname = data[i].phone_name.toLowerCase();
+            if (pname.includes(value)) {
+                filterData.push(data[i]);
+            }
+        }
+        return filterData;
+    }
+
+    function rebuildTable(data,value) {
+        var table = document.getElementById('table-product');
+        table.innerHTML = `<thead class="table-dark">
                             <tr class="tr-table-phone-title">
                                 <th class="th-phone-name">Phone name</th>
                                 <th class="th-image">image</th>
@@ -37,32 +118,60 @@
                                 <th class="th-description">Description</th>
                                 <th class="th-action">Action</th>
                             </tr>
-                            </thead>
-                            <tbody>
-                            <tr class="tr-phone-style" th:each="tempPhone:${phones}">
-                                <td class="td-phone-name" th:text="${tempPhone.phoneName}"/>
-                                <td class="td-phone-image">
-                                    <img th:src="'http://127.0.0.1:5000/get-image/'+${tempPhone.image}" th:width="200px" th:height="150px"/>
-                                </td>
-                                <td class="td-phone-brand" th:text="${tempPhone.brand}"/>
-                                <td class="td-phone-color" th:text="${tempPhone.color}"/>
-                                <td class="td-phone-price">
-                                    <span th:text="${#numbers.formatDecimal(tempPhone.price, 0, 'COMMA', 0, 'POINT')}">
-                                    </span>VNĐ</td>
-                                <td class="td-phone-quantity" th:text="${tempPhone.quantity}"/>
-                                <td class="td-phone-description" th:text="${tempPhone.description}"/>
-                                <td class="td-phone-action">
-                                    <a class="btn btn-primary btn-sm mb-3" th:href="@{/admin/updatePhone(idPhone=${tempPhone.id})}">Update</a>
-                                </td>
-                            </tr>
-                            </tbody>
-                        </table>
-                    </div>
+                            </thead>`;
+        if(value===''){
+            for (var i=0;i<phonePage.length;i++){
+                var row = `<tr>
+                            <td>${phonePage[i].phone_name}</td>
+                            <td >
+                            <img src="http://127.0.0.1:5000/get-image/${data[i].img}" width="200px" height="150px"/>
+                            </td>
+                            <td>${phonePage[i].type_phone_name}</td>
+                            <td>${phonePage[i].color}</td>
+                            <td>
+                            <span class="sp-price"> ${data[i].price} </span>
+                            </span>VNĐ</td>
+                            <td>${phonePage[i].quantity}</td>
+                            <td>${phonePage[i].phone_description}</td>
+                            <td>
+                            <a class="btn btn-primary btn-sm mb-3" href="/admin/updatePhone?idPhone=${phonePage[i].id}">Update</a>
+                            </td>
+                         </tr>`
+                table.innerHTML += row;
+            }
+        }else {
+            for (var i = 0; i < data.length; i++) {
+                var row = `<tr>
+                 <td>${data[i].phone_name}</td>
+                <td >
+                <img src="http://127.0.0.1:5000/get-image/${data[i].img}" width="200px" height="150px"/>
                 </td>
-            </tr>
-        </table>
+                <td>${data[i].type_phone_name}</td>
+                <td>${data[i].color}</td>
+                <td>
+                <span class="sp-price"> ${data[i].price} </span>
+                </span>VNĐ</td>
+                <td>${data[i].quantity}</td>
+                <td>${data[i].phone_description}</td>
+                <td>
+                <a class="btn btn-primary btn-sm mb-3" href="/admin/updatePhone?idPhone=${data[i].id}">Update</a>
+                </td>
+            </tr>`
+                table.innerHTML += row;
+            }
+            format();
+        }
 
-    </div>
-</div>
+    }
+
+    function format() {
+        let x = document.querySelectorAll(".sp-price");
+        for (let i = 0, len = x.length; i < len; i++) {
+            let num = Number(x[i].innerHTML)
+                .toLocaleString('en');
+            x[i].innerHTML = num;
+        }
+    }
+</script>
 </body>
 </html>
